--- a/Views/userList.html
+++ b/Views/userList.html
@@ -7,12 +7,28 @@
 </head>
 <body>
     
-    <div id="UserList">
-        this is a section to show userlist
+    <div id="userPageheader">
+
+        <div id="userPageSearch">
+            <input type="search" id="userNameSearchInput" placeholder="Type a name for search ...">
+            <label id="userNameWarningLable"></label>
+        </div>
+
+        <div class="userPageNavigation">
+
+        </div>
+
     </div>
 
-    <button onclick="searchUser()">searchUser1</button>
-    <button onclick="searchUser2()">searchUser1</button>
+    <div id="UserList">
+       
+    </div>
+
+    <div id="userPagefooter">
+        <div class="userPageNavigation">
+
+        </div>
+    </div>
 
     <script type="module" src="../Scripts/pages/userList.js"></script>
 </body>
