add pageNavigation and some styles

--- a/Components/UserThumbnail.html
+++ b/Components/UserThumbnail.html
@@ -1,3 +1,7 @@
-<div>
-    this is a user Thumbnail
+<div class="userThumb_parentDiv">
+
+    <img class="userThumb_avatar" src=""></img>
+    <span class="userThumb_fullName"></span>
+   
+    <script src="../Scripts/components/UserThumbnail.js"></script>   
 </div>
