--- a/Views/userList.html
+++ b/Views/userList.html
@@ -14,7 +14,7 @@
             <label id="userNameWarningLable"></label>
         </div>
 
-        <div class="userPageNavigation">
+        <div class="PageNavigation">
         </div>
 
     </div>
@@ -24,7 +24,7 @@
     </div>
 
     <div id="userPagefooter">
-        <div class="userPageNavigation">
+        <div class="PageNavigation">
         </div>
     </div>
 
