--- a/Views/userDetail.html
+++ b/Views/userDetail.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    <div>
-        back to user list
+    <div id="userMoreInfoback">
+        <== back
     </div>
 
     <div id="userMoreInfo">
