--- a/Views/Repositories.html
+++ b/Views/Repositories.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UserList</title>
+    <title>Repositories</title>
 </head>
 <body>
     
-    <div id="userPageheader">
+    <div id="repositoryPageHeader">
 
         <div class="SearchPanel">
             <input type="search" class="SearchInput" placeholder="Type a name for search ...">
@@ -19,15 +19,16 @@
 
     </div>
 
-    <div id="UserList">
+    <div id="RepoList">
        
     </div>
 
-    <div id="userPagefooter">
+    <div id="repositoryPageFooter">
         <div class="PageNavigation">
         </div>
     </div>
 
-    <script type="module" src="../Scripts/pages/userList.js"></script>
+    <script type="module" src="../Scripts/pages/repoList.js"></script>
+
 </body>
 </html>
